make sure buttons text never word-wrap
to avoid them getting fully disarranged in some specific cases...

--- a/dashboard/css/layout.css
+++ b/dashboard/css/layout.css
@@ -79,6 +79,7 @@ a.tip:hover span {
 .menulink {
    font-size            : 14pt;
    text-decoration      : none;
+   white-space          : nowrap;
    border               : 1px #000000 solid;
    padding-left         : 10px;
    padding-top          : 3px;
@@ -92,6 +93,7 @@ a.tip:hover span {
  .menulinkactive {
    font-size            : 14pt;
    text-decoration      : none;
+   white-space          : nowrap;
    border               : 1px #000000 solid;
    padding-left         : 10px;
    padding-top          : 3px;
